viewed correlation map

--- a/preprocessing/transform.ipynb
+++ b/preprocessing/transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8a23c002",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f9b2ca59",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv('../data/train.csv')"
+    "df = pd.read_csv('../data/train_cleaned.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e4bfb50f",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a5a0ae02",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "374bfe2d",
    "metadata": {},
    "outputs": [],
