--- a/preprocessing/correlation.ipynb
+++ b/preprocessing/correlation.ipynb
@@ -82,7 +82,7 @@
    "id": "06e07482",
    "metadata": {},
    "source": [
-    "There are quite a few variables that have codependent, which means that some features may not be neccessary for our model. To reduce redundant information, applying PCA may be a good idea."
+    "There are quite a few variables that have codependent, which means that some features may not be neccessary for our model. To reduce redundant information, applying PCA may be a good idea or having some regularization technique would work too."
    ]
   },
   {
