--- a/eda/transform.ipynb
+++ b/eda/transform.ipynb
@@ -60,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d170484",
+   "metadata": {},
+   "source": [
+    "### Applying Transformation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "a5a0ae02",
@@ -68,24 +76,6 @@
    "source": [
     "df['SalePrice'] = np.log1p(df['SalePrice'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "374bfe2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('../data/train_transformed.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc7a0a20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
