--- a/model/RandomForest.ipynb
+++ b/model/RandomForest.ipynb
@@ -11,11 +11,22 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b22cc29f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import importlib\n",
+    "sys.path.append('..')\n",
+    "import preprocessing.pipeline\n",
+    "importlib.reload(preprocessing.pipeline)\n",
+    "from preprocessing.pipeline import get_preprocessor"
    ]
   },
   {
