--- a/preprocessing/test.ipynb
+++ b/preprocessing/test.ipynb
@@ -2,28 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2bce7dab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'pipeline' from '/Users/andrewjowe/Desktop/STA160/preprocessing/pipeline.py'>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4b422d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import importlib\n",
     "import pipeline\n",
-    "from pipeline import get_preprocessor\n",
-    "importlib.reload(pipeline)"
+    "importlib.reload(pipeline)\n",
+    "from pipeline import get_preprocessor"
    ]
   },
   {
