--- a/model/RandomForest.ipynb
+++ b/model/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "4dad66aa",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import numpy as np\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.compose import TransformedTargetRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "b22cc29f",
    "metadata": {},
    "outputs": [],
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "41b66ffe",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "6069c251",
    "metadata": {},
    "outputs": [
@@ -62,17 +63,18 @@
     "# === Build preprocessing + modeling pipeline ===\n",
     "model_pipeline = Pipeline([\n",
     "  (\"preprocessor\", get_preprocessor()),\n",
-    "  (\"model\", RandomForestRegressor(n_estimators=100, random_state=42))\n",
+    "  (\"model\", TransformedTargetRegressor(\n",
+    "\t\tregressor=RandomForestRegressor(n_estimators=100, random_state=42),\n",
+    "\t\tfunc=np.log1p,\n",
+    "\t\tinverse_func=np.expm1\n",
+    "\t))\n",
     "])\n",
     "\n",
     "# === Fit the model ===\n",
-    "model_pipeline.fit(X_train, np.log1p(y_train)) # log(1 + y) to handle zeros\n",
+    "model_pipeline.fit(X_train, y_train)\n",
     "\n",
     "# === Predict on training data ===\n",
-    "y_pred_log = model_pipeline.predict(X_train)\n",
-    "\n",
-    "# === Inverse transform the prediction ===\n",
-    "y_pred = np.expm1(y_pred_log)  # inverse of log1p\n",
+    "y_pred = model_pipeline.predict(X_train)\n",
     "\n",
     "# === Evaluate ===\n",
     "rmse = np.sqrt(mean_squared_error(y_train, y_pred))\n",
@@ -84,19 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "40cc7dbf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Predict on test data ===\n",
-    "y_test_pred_log = model_pipeline.predict(X_test)\n",
-    "y_test_pred = np.expm1(y_test_pred_log)"
+    "y_test_pred = model_pipeline.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "9c474c77",
    "metadata": {},
    "outputs": [
@@ -164,7 +165,7 @@
        "4  1465  195917.291446"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
