--- a/eda/cleaning.ipynb
+++ b/eda/cleaning.ipynb
@@ -341,7 +341,7 @@
    "id": "f2d04caf",
    "metadata": {},
    "source": [
-    "There are a lot of missing values. A quick inspection of the dataset shows that the majority of these variables are categorical where a particular feature is not present. A great way to handle these is to label these categories as None."
+    "There are a lot of missing values, the majority of which are categorical variables. A quick inspection of the dataset description shows that NA implies that a particular feature is not present. A great way to handle these is to label these categories as None."
    ]
   },
   {
@@ -361,7 +361,7 @@
    "id": "a8dec297",
    "metadata": {},
    "source": [
-    "For numerical columns, we will investigate the underlying distribution and interpret the meaning behind these values before deciding how to handle these."
+    "For numerical columns, we will investigate the underlying distribution and consult the dataset description to interpret the meaning behind these values before deciding how to handle these."
    ]
   },
   {
