--- a/model/RandomForest.ipynb
+++ b/model/RandomForest.ipynb
@@ -854,6 +854,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "STA160",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -864,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
