--- a/preprocessing/test.ipynb
+++ b/preprocessing/test.ipynb
@@ -1585,6 +1585,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "STA160",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -1595,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
